--- a/about.html
+++ b/about.html
@@ -48,9 +48,9 @@
       <div class="divider grey"></div>
       <div class="team-row w-row">
         <div class="member w-col w-col-3 w-col-small-6">
-          <div class="div-block-14"></div>
-          <h3 class="team-title">Alex Sun</h3>
-          <div class="role">Co-founder</div>
+          <div class="div-block-14 _1"></div>
+          <h3 class="team-title">Arthur Zhang</h3>
+          <div class="role">Founder & President</div>
           <div class="social-buttons">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac6345558275_twitter-icon_black.svg" width="14" alt=""></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aacb37a558273_linkdin-icon-black.svg" width="14" alt=""></a>
@@ -58,9 +58,9 @@
           </div>
         </div>
         <div class="member w-col w-col-3 w-col-small-6">
-          <div class="div-block-14 _1"></div>
-          <h3 class="team-title">Arthur Zhen</h3>
-          <div class="role">Co-founder</div>
+          <div class="div-block-14"></div>
+          <h3 class="team-title">Alex Sun</h3>
+          <div class="role">Vice President & Founding Member</div>
           <div class="social-buttons">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac6345558275_twitter-icon_black.svg" width="14" alt=""></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aacb37a558273_linkdin-icon-black.svg" width="14" alt=""></a>
@@ -70,7 +70,7 @@
         <div class="member w-col w-col-3 w-col-small-6">
           <div class="div-block-14 _2"></div>
           <h3 class="team-title">Jack Guo</h3>
-          <div class="role">Co-founder</div>
+          <div class="role">Technology Head & Founding Member</div>
           <div class="social-buttons">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac3f3a55826b_instagram-icon-black.svg" width="14" alt=""></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac6345558275_twitter-icon_black.svg" width="14" alt=""></a>
@@ -80,7 +80,7 @@
         <div class="member w-col w-col-3 w-col-small-6">
           <div class="div-block-14 _3"></div>
           <h3 class="team-title">Kenny Xu</h3>
-          <div class="role">Co-founder</div>
+          <div class="role">Founding Member</div>
           <div class="social-buttons">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aace37355826f_facebook-icon_black.svg" width="14" alt=""></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac6345558275_twitter-icon_black.svg" width="14" alt=""></a>
@@ -91,8 +91,8 @@
       <div class="team-row w-row">
         <div class="member w-col w-col-3 w-col-small-6">
           <div class="div-block-14 _4"></div>
-          <h3 class="team-title">David</h3>
-          <div class="role">Co-founder</div>
+          <h3 class="team-title">David Miao</h3>
+          <div class="role">Founding Member</div>
           <div class="social-buttons">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac6345558275_twitter-icon_black.svg" width="14" alt=""></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aacb37a558273_linkdin-icon-black.svg" width="14" alt=""></a>
@@ -101,8 +101,8 @@
         </div>
         <div class="member w-col w-col-3 w-col-small-6">
           <div class="div-block-14 _5"></div>
-          <h3 class="team-title">Eli</h3>
-          <div class="role">Co-founder</div>
+          <h3 class="team-title">Eli Forcucci</h3>
+          <div class="role">Founding Member</div>
           <div class="social-buttons">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac6345558275_twitter-icon_black.svg" width="14" alt=""></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aacb37a558273_linkdin-icon-black.svg" width="14" alt=""></a>
@@ -111,8 +111,8 @@
         </div>
         <div class="member w-col w-col-3 w-col-small-6">
           <div class="div-block-14 _6"></div>
-          <h3 class="team-title">Larrry</h3>
-          <div class="role">Co-founder</div>
+          <h3 class="team-title">Larry Jin</h3>
+          <div class="role">Founding Member</div>
           <div class="social-buttons">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac3f3a55826b_instagram-icon-black.svg" width="14" alt=""></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac6345558275_twitter-icon_black.svg" width="14" alt=""></a>
@@ -121,8 +121,8 @@
         </div>
         <div class="member w-col w-col-3 w-col-small-6">
           <div class="div-block-14 _7"></div>
-          <h3 class="team-title">Nile</h3>
-          <div class="role">Co-founder</div>
+          <h3 class="team-title">Nile Kurhajetz</h3>
+          <div class="role">Outreach Head & Founding Member</div>
           <div class="social-buttons">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aace37355826f_facebook-icon_black.svg" width="14" alt=""></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/604c2ad49d1aac9d6d55824f/604c2ad49d1aac6345558275_twitter-icon_black.svg" width="14" alt=""></a>
@@ -148,7 +148,7 @@
   </div>
   <div class="section wide">
     <div data-w-id="8cf47482-19f1-1f52-25ba-910a60bc91de" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
-      <h2>Get updates from Richard</h2>
+      <h2>Get updates from Us</h2>
       <p>New course alerts, discounts and free lessons</p>
       <div class="form-block w-form">
         <form id="email-form" name="email-form" data-name="Email Form" class="form-2"><input type="text" class="input w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Enter your email" id="email-2" required=""><input type="submit" value="Subscribe" data-wait="Please wait..." class="button form-button w-button"></form>
