--- a/contact-us.html
+++ b/contact-us.html
@@ -94,7 +94,7 @@
   </div>
   <div class="section wide">
     <div data-w-id="8cf47482-19f1-1f52-25ba-910a60bc91de" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
-      <h2>Get updates from Richard</h2>
+      <h2>Get updates from Us</h2>
       <p>New course alerts, discounts and free lessons</p>
       <div class="form-block w-form">
         <form id="email-form" name="email-form" data-name="Email Form" class="form-2"><input type="text" class="input w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Enter your email" id="email-2" required=""><input type="submit" value="Subscribe" data-wait="Please wait..." class="button form-button w-button"></form>
